--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-theme:cayman
+@@ -2,4 +2,4 @@ title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: 
+theme: jekyll-theme-cayman
 <p>Hello 大家好</p>
 <p>我是杨铖，这是我的个人网站。 </p>
 <p>很高兴你来到这里, 你可以添加我的微信，或者致电（+86）13434447220</p>
